--- a/app/views/cellars/show.html.erb
+++ b/app/views/cellars/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Cellars#show</h1>
-<p>Find me in app/views/cellars/show.html.erb</p>
+<h1>Ma Cave</h1>
+
+<div class="card-product">
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <div class="card-product-infos">
+    <h2>Château Laffite</h2>
+    <p>Année : <strong>1999</strong></p>
+  </div>
+</div>
