cave tjs en cours

--- a/app/views/cellars/update.html.erb
+++ b/app/views/cellars/update.html.erb
@@ -1,2 +1,2 @@
-<h1>Cellars#update</h1>
-<p>Find me in app/views/cellars/update.html.erb</p>
+<h1>Stocks#update</h1>
+<p>Find me in app/views/stocks/update.html.erb</p>
