--- a/app/views/cellars/edit.html.erb
+++ b/app/views/cellars/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Cellars#edit</h1>
-<p>Find me in app/views/cellars/edit.html.erb</p>
+<h1>Stocks#edit</h1>
+<p>Find me in app/views/stocks/edit.html.erb</p>
