--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,6 @@
 <h1><% @users.each do |user| %>
-<li><ul><%= user.email %></ul> </li>
+
+<li><ul><%= user.id %></ul>
+  <ul><%= user.last_name %></ul>
+<ul><%= user.first_name %></ul> </li>
 <% end %></h1>
