--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
+<%= @user.last_name  %>
 
-
-<h1><%= @user.email  %></h1>
-X
+  <%= @friends.each do |friend|  %>
+  <%=  friend.user_friend.first_name%>
+  <% end %>
