feature friends fait

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
 <% @friends.each do |friend|  %>
-<div><div class="card-product">
-  <<%= link_to , user_path %>
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <div><div class="card-product">
+  <%= link_to(image_tag('https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg', alt: 'Image Description'), user_path(friend)) %>
   <div class="card-product-infos">
-    <h2><%= friend.user_friend.first_name%> <%= friend.user_friend.last_name%></h2>
+    <h2><%= friend.first_name%> <%= friend.last_name%></h2>
   </div>
 </div>
 </div>
