--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,31 @@
-<nav class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+<%# ============================================ %>
+<%# 🍷 TASTE & DRINK - NAVBAR %>
+<%# Structure: Logo (gauche) | Avatar Profil (droite) %>
+<%# ============================================ %>
+
+<nav class="td-navbar">
+  <div class="td-navbar-container">
+    <%# === LOGO (gauche) - Cliquable vers Home === %>
+    <%= link_to root_path, class: "td-navbar-logo" do %>
+      <%= image_tag "logo_taste_drink.png", alt: "Taste & Drink" %>
     <% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
+    <%# === AVATAR PROFIL (droite) - Cliquable vers Profil === %>
+    <% if user_signed_in? %>
+      <%= link_to user_path(current_user), class: "td-navbar-avatar" do %>
+        <% if current_user.respond_to?(:photo) && current_user.photo.attached? %>
+          <%= image_tag current_user.photo, alt: current_user.first_name || "Profil" %>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
+          <%# Avatar par défaut avec les initiales %>
+          <div class="td-avatar-placeholder">
+            <%= current_user.first_name&.first&.upcase || current_user.email.first.upcase %>
+          </div>
         <% end %>
-      </ul>
-    </div>
+      <% end %>
+    <% else %>
+      <%= link_to new_user_session_path, class: "td-navbar-login" do %>
+        <i class="fas fa-user"></i>
+      <% end %>
+    <% end %>
   </div>
 </nav>
