--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,8 @@
 // Import your components CSS files here.
+@import "layout";
 @import "alert";
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "footbar";
 @import "card_product";
