--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<div></div>
+
+
+
+
 <% @friends.each do |friend|  %>
   <div><div class="card-product">
   <%= link_to(image_tag('https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg', alt: 'Image Description'), user_path(friend)) %>
