--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
         <span class="td-stat-label">Events</span>
       </div>
       <div class="td-stat-card">
-        <span class="td-stat-value"><%= current_user.stocks.sum(:quantity) %></span>
+        <%# <span class="td-stat-value"><%= current_user.stocks.sum(:quantity) %>
         <span class="td-stat-label">Bouteilles</span>
       </div>
       <div class="td-stat-card">
