front profil OK

--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,15 +1,16 @@
 .card-product {
   overflow: hidden;
-  height: 120px;
+  width: 100px; /* Largeur fixe pour la card */
   background: rgb(7, 7, 7);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
+  flex-direction: column; /* Changé pour mettre les éléments en colonne */
   align-items: center;
 }
 
 .card-product img {
-  height: 100%;
-  width: 120px;
+  height: 100px; /* Hauteur de l'image */
+  width: 100%; /* Prend toute la largeur de la card */
   object-fit: cover;
 }
 
@@ -29,4 +30,5 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+  width: 50%; /* Pour que le texte prenne toute la largeur */
 }
