friends controllers friends index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <%# Header de bienvenue %>
     <div class="td-home-header">
       <p class="td-home-greeting">Bonjour,</p>
-      <h1 class="td-home-name"><%= current_user.first_name || "Chef" %> 👋</h1>
+      <h1 class="td-home-name"><%= current_user.first_name || "Chef" %> </h1>
     </div>
 
     <%# Carte principale - Action rapide %>
