--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,21 +1,30 @@
-<h1>Ma Cave</h1>
-
-<% @stocks.each do |stock| %>
-  <div class="stock-item">
-    <span><%= stock.drink.title %></span>
-
-    <div class="counter">
-      <%= button_to "-", stock_path(stock, stock: { quantity: stock.quantity - 1 }),
-          method: :patch,
-          class: "btn btn-secondary" %>
-
-      <span class="quantity"><%= stock.quantity %></span>
-
-      <%= button_to "+", stock_path(stock, stock: { quantity: stock.quantity + 1 }),
-          method: :patch,
-          class: "btn btn-secondary" %>
+<div class="container">
+    <div class="td-home-header">
+      <p class="td-home-name">Ma Cave</p>
     </div>
-  </div>
-<% end %>
+    <% @stocks.each do |stock| %>
+      <div class="d-flex align-items-center">
+        <div class="td-home-hero">
+          <div class="td-hero-content">
+            <div class="stock-item">
+              <span><%= link_to "#{stock.drink.title}", drink_path(stock.drink) %></span>
+              <div class="counter">
+                <%= button_to "-", stock_path(stock, stock: { quantity: stock.quantity - 1 }),
+                    method: :patch,
+                    class: "btn btn-secondary rounded-circle mt-3" %>
+              </div>
 
-<%= link_to "Add a new stock", new_stock_path, class: "btn btn-info" %>
+                <span class="quantity"><%= stock.quantity %></span>
+
+              <div class="counter">
+                <%= button_to "+", stock_path(stock, stock: { quantity: stock.quantity + 1 }),
+                    method: :patch,
+                    class: "btn btn-secondary rounded-circle" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  <%= link_to "Add a new stock", new_stock_path, class: "btn btn-gold " %>
+</div>
