--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -2,13 +2,13 @@
 
 <div class="container py-5">
   <div class="row">
-    <div class="col-12 col-md-6 offset-lg-3">
+    <%# <div class="col-12 col-md-6 offset-lg-3"> %>
       <div class="bg-white rounded p-3 shadow">
         <h3>Create a new stock</h3>
           <%= simple_form_for(@stock) do |f| %>
             <%= f.association :drink, input_html: {data: {controller: "tom-select"}} %>
             <%= f.input :quantity %>
-            <%= f.submit class: "btn btn-warning" %>
+            <%= f.submit class: "btn btn-gold" %>
           <% end %>
       </div>
     </div>
