--- a/app/views/stocks/new.html.erb
+++ b/app/views/stocks/new.html.erb
@@ -1,15 +1,24 @@
 
 
-<div class="container py-5">
-  <div class="row">
-    <%# <div class="col-12 col-md-6 offset-lg-3"> %>
-      <div class="bg-white rounded p-3 shadow">
-        <h3>Create a new stock</h3>
-          <%= simple_form_for(@stock) do |f| %>
-            <%= f.association :drink, input_html: {data: {controller: "tom-select"}} %>
-            <%= f.input :quantity %>
-            <%= f.submit class: "btn btn-gold" %>
-          <% end %>
+<div class="container">
+    <div class="d-flex align-items-center mt-5">
+        <div class="td-home-hero">
+          <div class="td-hero-content">
+            <div class="stock-item">
+              <div class="row">
+                <div class="col-12 col-md-6 offset-lg-3">
+                  <div class="bg-white rounded p-3">
+                    <h3>Create a new stock</h3>
+                      <%= simple_form_for(@stock) do |f| %>
+                        <%= f.association :drink, input_html: {data: {controller: "tom-select"}} %>
+                        <%= f.input :quantity %>
+                        <%= f.submit class: "btn btn-gold" %>
+                      <% end %>
+                  </div>
+                </div>
+
+            </div>
+          </div>
       </div>
     </div>
   </div>
