--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -18,7 +18,7 @@
           <div class="td-card td-friend-card">
             <%# === AVATAR === %>
             <div class="td-friend-avatar">
-              <% if friend.respond_to?(:photo) && friend.photo.attached? %>
+              <% if friend.respond_to?(:photo) && friend.photo.present? %>
                 <%= image_tag friend.photo, alt: "#{friend.first_name}" %>
               <% else %>
                 <span class="td-friend-initials">
